Added all required chapters folders

--- a/main.tex
+++ b/main.tex
@@ -7,6 +7,19 @@
     \tableofcontents
 
     \input{src/abstract/_main}
+    
     \chapter{Analisi dei requisiti}
-    \input{src/analisiRequisiti/_main}
+        \input{src/analisiRequisiti/_main}
+
+    \chapter{Progettazione concettuale}
+        \input{src/progettazioneConcettuale/_main}
+
+    \chapter{Progettazione logica}
+        \input{src/progettazioneLogica/_main}
+
+    \chapter{Implementazione dello schema logico}
+        \input{src/implementazioneSchemaLogico/_main}
+
+    \chapter{Query Funzioni e Indici}
+        \input{src/queryFunzioniIndici/_main}
 \end{document}
