Brief brainstorming for abstract

--- a/src/abstract/abstract.tex
+++ b/src/abstract/abstract.tex
@@ -1,1 +1,12 @@
-Abstract che di default occupa una pagina intera, cosi come la tabella dei contenuti
+Storia antica quasi 10000 anni 
+
+Fa parte della cultura (religiosa e non) di moltissimi
+
+Italia maggiore esportatore di vino al mondo
+
+Fatturato +7.5 nel 2018 
+
+Il fatturato maggiore lo hanno due colossi cooperativi -> cooperative -> e' un ambiente spesso gestito da piccole aziende agricole 
+con poche risorse e talvolta poca/arretrata organizzazione
+
+Descrizione societa' fittizia 
