--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,16 @@
-\documentclass[a4paper,11pt]{report}
+\documentclass[a4paper,10pt]{report}
 \usepackage[T1]{fontenc}        % Codifica dei font
 \usepackage[utf8]{inputenc}    % Lettere accentate da tastiera
 \usepackage[english,italian]{babel}     % Lingua del documento
+\usepackage{color, colortbl}
+\usepackage{booktabs}
+\usepackage{array}
+%\usepackage[compact]{titlesec}
+\usepackage[margin=0.8in, includefoot]{geometry}
+
+\newcolumntype{P}[1]{>{\centering\arraybackslash}p{#1}}
+%\titleformat{\chapter}[display]{\bfseries}{}{-30pt}{\Huge}
+
 
 \begin{document}
     \tableofcontents
