Aggiunta analisi_relazioni, da completare

--- a/src/progettazioneConcettuale/analisi_entita.tex
+++ b/src/progettazioneConcettuale/analisi_entita.tex
@@ -178,7 +178,7 @@ Il simbolo $\gets$ identifica una generalizzazione completa, cioè l'\textbf{ent
 	\midrule
 	\textbf{ID} & VARCHAR &  Identifica univocamente un ordine di vendita ricevuto\\
 	\midrule
-	PrezzoTotale & INTEGER &  Rappresenta il prezzo complessivo dell'ordine\\
+	PrezzoTotale & INTEGER &  Rappresenta il prezzo complessivo dell'ordine, formato da prezzo di spedizione più il costo delle bottigle acquistate\\
 	\midrule
 	Data & DATE &  Data in cui è stato effettuato l'ordine\\
 	\bottomrule
