--- a/src/progettazioneConcettuale/_main.tex
+++ b/src/progettazioneConcettuale/_main.tex
@@ -1,2 +1,5 @@
 \section{Analisi Entita'}
     \input{src/progettazioneConcettuale/analisi_entita.tex}
+    
+\section{Analisi delle relazioni e delle cardinalità}
+	\input{src/progettazioneConcettuale/analisi_relazioni.tex}
