Aggiunto attributo CognomeReferente e modifiche ai rispettivi file latex. Finito eliminazioni_generalizzazioni.tex

--- a/src/progettazioneConcettuale/analisi_entita.tex
+++ b/src/progettazioneConcettuale/analisi_entita.tex
@@ -206,6 +206,8 @@ Il simbolo $\gets$ identifica una generalizzazione completa, cioè l'\textbf{ent
 	\rowcolor[rgb]{.929, .929, .929} Attributo & Tipo & Descrizione \\
 	\midrule
 	NomeReferente & VARCHAR &  Rappresenta il nome del referente dell'azienda\\
+	\midrule
+	CognomeReferente & VARCHAR &  Rappresenta il cognome del referente dell'azienda\\
 	\bottomrule
 \end{tabular}
 
