Aggiunta ER ristrutturato

--- a/src/progettazioneLogica/eliminazioni_generalizzazioni.tex
+++ b/src/progettazioneLogica/eliminazioni_generalizzazioni.tex
@@ -8,7 +8,7 @@ L'entità \emph{Fornitore} presenta solo un attributo comune a tutte le entità 
 
 \begin{flushleft}
 	\textbf{\large{Acquirente}}\\
-	L'entità \emph{Acquirente} presenta molteplici attributi ed una relazione. A loro volta anche le entità figlie \emph{Azienda e Privato} hanno attributi significativi. Per ristrutturare questa generalizzazione si è deciso di creare due relazioni differenti. La prima si chiama \textbf{IsAzienda} dove la cardinalità in entrambi i versi è di (1,1), cioè un' acquirente può essere solo un' azienda, ed un' azienda è identificata come un solo acquirente.
+	L'entità \emph{Acquirente} presenta molteplici attributi ed una relazione. A loro volta anche le entità figlie \emph{Azienda e Privato} hanno attributi significativi. Per ristrutturare questa generalizzazione si è deciso di creare due relazioni differenti. La prima si chiama \textbf{IsAzienda} dove la cardinalità da \emph{Azienda ad Acquirente} è (1,1) perchè un'azienda è sempre un'acquirente, invece da \emph{Acquirente ad Azienda} è (0,1) perchè non sempre un acquirente è un'azienda.
 	La seconda relazione si chiama \textbf{IsPrivato} dove le cardinalità sono rappresentate come fra \emph{Azienda ed Acquirente}. Le entità \emph{Azienda e Privato} avranno sempre gli attributi visti in precedenza ed inoltre l'attributo \textbf{ID} che ha il ruolo di chiave primaria e di chiave referenziale con l'attributo \textbf{ID} di \emph{Acquirente}. 
 \end{flushleft}
 
@@ -19,7 +19,7 @@ L'entità \emph{Fornitore} presenta solo un attributo comune a tutte le entità 
 
 \begin{flushleft}
 	\textbf{\large{LineaProduttiva}}\\
-	L'entità \emph{LineaProduttiva} è una generalizzazione a più livelli, infatti essa generalizza le entità \emph{ProduzioneVino, Imbottigliamento, Magazzino}. A sua volta l'entità \textbf{ProduzioneVino} generalizza \emph{IngrMateriePrime, Pigiatura, Fermentazione, Vinificazione, Svinatura}. Essendo tutte generalizzazioni complete e non avendo attributi (a parte l'entità \emph{Magazzino}*) che vanno a particolarizzare le varie entità figlie, si è deciso di aggiungere un attributo \textbf{Tipologia} nell'entità \emph{LineaProduttiva} che identifica queste specializzazioni.
+	L'entità \emph{LineaProduttiva} è una generalizzazione a più livelli, infatti essa generalizza le entità \emph{ProduzioneVino, Imbottigliamento, Magazzino}. A sua volta l'entità \textbf{ProduzioneVino} generalizza \emph{IngrMateriePrime, Pigiatura, Fermentazione, Vinificazione, Svinatura}. Infine l'entità \emph{Magazzino} generalizza le entità \emph{MagTorino, MagNapoli, MagFirenze, MagMilano, MagCagliari}. Essendo tutte generalizzazioni complete e non avendo attributi (a parte l'entità \emph{Magazzino}*) che vanno a particolarizzare le varie entità figlie, si è deciso di aggiungere un attributo \textbf{Tipologia} nell'entità \emph{LineaProduttiva} che identifica queste specializzazioni.
 \end{flushleft}
 
 \begin{verse}
