Aggiunta specializzazioni magazzino

--- a/src/progettazioneConcettuale/analisi_entita.tex
+++ b/src/progettazioneConcettuale/analisi_entita.tex
@@ -1,16 +1,11 @@
 Il grassetto negli attributi indica che quell'attributo è o fa parte di una chiave. \\
 Il simbolo $\gets$ identifica una generalizzazione completa, cioè l'\textbf{entita'} a sinistra è una generalizzazione completa delle identità che stanno a destra.
 
-
-\begin{verse}
-	L'\textbf{entita'} \emph{NegozioInterno} è priva di attributi. 
-\end{verse}
-
 \begin{verse}
 	L'\textbf{entita'} \emph{ProduzioneVino} è una generalizzazione completa delle entita' \emph{IngrMateriePrime, Pigiatura, Fermentazione, Vinificazione, Svinatura} che sono tutte prive di attributi.
 \end{verse}
 \begin{verse}
-	Le \textbf{entita'} \emph{ProduzioneVino, Imbottigliamento} sono prive di attributi.
+	Le \textbf{entita'} \emph{ProduzioneVino, Imbottigliamento, NegozioInterno, MagBianco, MagRosso, MagRosato, MagSpumante} sono prive di attributi.
 \end{verse}
 
 \vspace{0.5cm}
@@ -284,7 +279,7 @@ Il simbolo $\gets$ identifica una generalizzazione completa, cioè l'\textbf{ent
 \vspace{0.5cm}
 
 \begin{tabular}{P{4cm}P{2cm}P{8cm}}
-	\multicolumn{3}{c}{\textbf {\large {Magazzino}}} \\
+	\multicolumn{3}{c}{\textbf {\large {Magazzino} $\gets$ (\emph{MagBianco, MagRosso, MagRosato, MagSpumante})}} \\
 	\toprule
 	\rowcolor[rgb]{.929, .929, .929} Attributo & Tipo & Descrizione \\
 	\midrule
