Aggiunta identificatori_principali, accorpamento_entita e modifica sull'ER ristrutturato

--- a/src/progettazioneConcettuale/_main.tex
+++ b/src/progettazioneConcettuale/_main.tex
@@ -1,4 +1,4 @@
-\section{Analisi Entita'}
+\section{Analisi Entita'}\label{analisi_entita}
     \input{src/progettazioneConcettuale/analisi_entita.tex}
     
 \section{Analisi delle relazioni e delle cardinalità}
