--- a/src/progettazioneConcettuale/analisi_entita.tex
+++ b/src/progettazioneConcettuale/analisi_entita.tex
@@ -294,7 +294,7 @@ Il simbolo $\gets$ identifica una generalizzazione completa, cioè l'\textbf{ent
 	\toprule
 	\rowcolor[rgb]{.929, .929, .929} Attributo & Tipo & Descrizione \\
 	\midrule
-	\textbf{ID} & VARCHAR &  Rappresenta univocamente il dipendente\\
+	\textbf{CodFiscale} & VARCHAR &  Rappresenta univocamente il dipendente\\
 	\midrule
 	Nome & VARCHAR & Rappresenta il nome del dipendente \\
 	\midrule
