--- a/src/progettazioneLogica/_main.tex
+++ b/src/progettazioneLogica/_main.tex
@@ -4,5 +4,8 @@
 \section{Eliminazioni generalizzazioni}
 \input{src/progettazioneLogica/eliminazioni_generalizzazioni.tex}
 
+\section{Partizionamento/accorpamento di entità e relationship}
+\input{src/progettazioneLogica/accorpamento_entita.tex}
+
 \section{Scelta degli identificatori principali}
 \input{src/progettazioneLogica/identificatori_principali.tex}
