Aggiunto schema relazionale e vincoli d'integrità referenziale

--- a/src/progettazioneConcettuale/analisi_entita.tex
+++ b/src/progettazioneConcettuale/analisi_entita.tex
@@ -45,7 +45,7 @@ Il simbolo $\gets$ identifica una generalizzazione completa, cioè l'\textbf{ent
 		\midrule
 		\textbf{Tipologia} & VARCHAR &  Identifica univocamente il tipo d'uva\\
 		\midrule
-		\textbf{DataRaccolta} & DATE & Data in cui viene raccolta l'uva \\
+		\textbf{AnnoRaccolta} & INTEGER & Anno in cui viene raccolta l'uva \\
 		\midrule
 		Colore & VARCHAR & Identifica il colore dell'uva \\
 		\bottomrule
